<resources>
    <string name="app_name">Votacao 3AI</string>
    <string name="loginTXT">ENTRAR</string>
    <string name="hint_login_txt">MATRÍCULA</string>
    <string name="votacaoTXT">VOTAÇÃO</string>
    <string name="submeterTXT">Submeter</string>
    <string name="addEquipeTXT">Adicionar</string>
    <string name="rankingTXT">Ranking</string>
    <string name="lgoutTXT">Sair</string>
    <string name="cadTXT">Cadastrar Equipe</string>
    <string name="nomeEquipeTXT">Nome do Projeto</string>
    <string name="represaTXT">Nome do Líder</string>
    <string name="geralTXT">Geral</string>
    <string name="r_00_00">R$ 00.00</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="nome_pessoas">NOME PESSOAS</string>
    <string name="_0_perc">0%</string>
</resources>
