<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_padrao"
    tools:context=".TelaVotacaoListaActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="290dp"
        android:layout_height="66dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@drawable/borda_list_top"
        android:paddingLeft="70dp"
        android:paddingTop="10dp"
        android:text="@string/votacaoTXT"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lista_equipes_geral_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lista_equipes_geral_id"
        android:layout_width="290dp"
        android:layout_height="334dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="210dp"
        android:background="#B5DD8D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@drawable/bordar_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_equipes_geral_id" />

    <Button
        android:id="@+id/botao_add_equipe_id"
        android:layout_width="105dp"
        android:layout_height="49dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/bordar_button"
        android:fontFamily="sans-serif"
        android:text="@string/addEquipeTXT"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/botao_ranking_id"
        android:layout_width="105dp"
        android:layout_height="49dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@drawable/bordar_button"
        android:fontFamily="sans-serif"
        android:text="@string/rankingTXT"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/botao_logout_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginLeft="171dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/bordar_button"
        android:fontFamily="sans-serif"
        android:text="@string/lgoutTXT"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_ranking_id" />

</androidx.constraintlayout.widget.ConstraintLayout>